--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<h1>Welcome to Angular</h1>
+<h1>Welcome to ByteURL</h1>
 <header>
-  <nav routerLink="/test/one">Go To Test</nav>
+  <nav routerLink="/">Home</nav>
+  <nav routerLink="/auth/login">Login</nav>
 </header>
 
 <router-outlet></router-outlet>
