--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,3 @@
-<h1>Welcome to ByteURL</h1>
-<header>
-  <nav routerLink="/">Home</nav>
-  <nav routerLink="/auth/login">Login</nav>
-</header>
+<app-header></app-header>
 
 <router-outlet></router-outlet>
