--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -7,4 +7,6 @@ body {
   font-family: font.$base-font-family;
   font-size: font.$base-font-size;
   line-height: font.$base-line-height;
+  direction: ltr;
+  background: #f3f4f7;
 }
