--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,7 @@
-<p>header works!</p>
+<header class="header">
+  <h1 class="header__title">ByteURL</h1>
+  <nav class="header__navigation">
+    <a class="app-a" routerLink="/">Home</a>
+    <a class="app-a" routerLink="auth/login">Login</a>
+  </nav>
+</header>
