--- a/src/app/pages/auth/pages/login/login.component.html
+++ b/src/app/pages/auth/pages/login/login.component.html
@@ -6,24 +6,7 @@
       <mat-card-subtitle>Login or Register</mat-card-subtitle>
     </mat-card-header>
     <mat-card-content>
-      <form>
-        <mat-form-field appearance="fill" class="full-width">
-          <mat-label>Email</mat-label>
-          <input matInput type="email" required />
-        </mat-form-field>
-
-        <mat-form-field appearance="fill" class="full-width">
-          <mat-label>Password</mat-label>
-          <input matInput type="password" required />
-        </mat-form-field>
-
-        <button mat-raised-button color="primary" class="full-width">
-          Login
-        </button>
-        <button mat-button color="accent" class="full-width switch-mode">
-          Register instead
-        </button>
-      </form>
+      <form><app-input [placeholder]="'Email'"></app-input></form>
     </mat-card-content>
   </mat-card>
 </div>
