Rearrange the routes

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,6 +2,6 @@
   <h1 class="header__title">ByteURL</h1>
   <nav class="header__navigation">
     <a class="app-a" routerLink="/">Home</a>
-    <a class="app-a" routerLink="auth/login">Login</a>
+    <a class="app-a" routerLink="login">Login</a>
   </nav>
 </header>
