--- a/src/app/pages/auth/pages/login/login.component.html
+++ b/src/app/pages/auth/pages/login/login.component.html
@@ -1,12 +1,6 @@
-<!-- auth.component.html -->
-<div class="auth-container">
-  <mat-card class="auth-card">
-    <mat-card-header>
-      <mat-card-title>Welcome</mat-card-title>
-      <mat-card-subtitle>Login or Register</mat-card-subtitle>
-    </mat-card-header>
-    <mat-card-content>
-      <form><app-input [placeholder]="'Email'"></app-input></form>
-    </mat-card-content>
-  </mat-card>
-</div>
+<h1>Login</h1>
+
+<form><app-input [placeholder]="'Email'"></app-input></form>
+<section>
+  <button routerLink="/">Go Home</button>
+</section>
